# app/Models/Product.php
@@ -1,0 +1,24 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\SoftDeletes;
+use PhpParser\Node\Expr\FuncCall;
+
+class Product extends Model
+{
+    use HasFactory,SoftDeletes;
+
+    protected $fillable = [
+        'category_id',
+        'name',
+        'exist',
+    ];
+
+    public function seasonings()
+    {
+        return $this->hasMany(Seasoning::class);
+    }
+}
